change db implementation, refactor some filenames and comments, and add a composer file

--- a/includes/HF.html
+++ b/includes/HF.html
@@ -1,5 +1,5 @@
 <div id="header">
-    <a href='../common/Home.php'>
+    <a href='../common/index.php'>
         <img src="../images/logo.png" style="float: left; " alt="logo" width="240" height="160"></a>
     <div id="userStuff">
         <img id="userImage" src="../images/myImage.jpg" alt="User picture" height="160">
@@ -23,7 +23,7 @@
             <li><a href="http://lib.bue.edu.eg/" class="navLink">Library</a></li>
             <li>SRS</li>
             <ul>
-                <li> <a href="../user/StudentSchedule.html" class="navLink">Schedule</a></li>
+                <li> <a href="../user/studentSchedule.php" class="navLink">Schedule</a></li>
             </ul>
 
         </ul>
@@ -40,10 +40,10 @@
             <li><a href="http://lib.bue.edu.eg/" class="navLink">Library</a></li>
             <li>SRS</li>
             <ul>
-                <li> <a href="../admin/AdminScheduleEdit.php" class="navLink">Schedule Edit</a></li>
-                <li> <a href="../admin/AdminScheduleView.php" classa="navLink">Schedule View</a></li>
-                <li> <a href="../admin/AdminAddModule.php" class="navLink">Add Modules</a></li>
-                <li> <a href="../admin/AdminDeleteModule.php" class="navLink">Delete Modules</a></li>
+                <li> <a href="../admin/adminScheduleEdit.php" class="navLink">Schedule Edit</a></li>
+                <li> <a href="../admin/adminScheduleView.php" classa="navLink">Schedule View</a></li>
+                <li> <a href="../admin/adminAddModule.php" class="navLink">Add Modules</a></li>
+                <li> <a href="../admin/adminDeleteModule.php" class="navLink">Delete Modules</a></li>
             </ul>
 
         </ul>
