--- a/includes/HF.html
+++ b/includes/HF.html
@@ -1,5 +1,5 @@
 <div id="header">
-    <a href='../common/index.php'>
+    <a href='../index.php'>
         <img src="../images/logo.png" style="float: left; " alt="logo" width="240" height="160"></a>
     <div id="userStuff">
         <img id="userImage" src="../images/myImage.jpg" alt="User picture" height="160">
